--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: '3'
 services: 
-  web: 
+  react: 
     build: 
       context: .
       dockerfile: Dockerfile.dev
@@ -9,3 +9,11 @@ services:
     volumes:
       - /app/node_modules
       - .:/app
+  tests: 
+    build: 
+      context: .
+      dockerfile: Dockerfile.dev
+    volumes: 
+      - /app/node_modules
+      - .:/app
+    command: ["yarn", "test"] 
